--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -382,3 +382,17 @@
 .copyright a:hover {
     color: var(--secondary);
 }
+
+.dropdown-menu li {
+position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+display: none;
+position: absolute;
+right: 100%;
+left: auto;
+top: -7px;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+display: block;
+}
